[package]
name = "wasm-example"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = ["skia-safe/gl", "skia-safe/textlayout"]

[dependencies]
skia-safe = "0.58"
gl = "0.14.0"
futures = "0.3.25"
reqwest-wasm = "0.11.16"
once_cell = "1.17.0"
rand = "0.8.5"

[profile.release]
panic = "abort"